--- a/examples/bancomat_exceptions/.project
+++ b/examples/bancomat_exceptions/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bancomat-exceptions</name>
+	<name>bancomat_exceptions</name>
 	<comment></comment>
 	<projects>
 	</projects>
