Bancomat example renamed to ATM

--- a/examples/atm_exceptions/.project
+++ b/examples/atm_exceptions/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bancomat_exceptions</name>
+	<name>atm_exceptions</name>
 	<comment></comment>
 	<projects>
 	</projects>
