--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,19 @@
 /*
-   Moise Gradle file
+   moise-exceptions Gradle file
 
 */
 
+plugins {
+  id 'java'
+  id 'eclipse'
+  id 'maven'
+  id 'maven-publish'
+}
+
 defaultTasks 'jar'
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
-
-version '0.13-EXCEPTIONS'
-group   'org.jacamo'
+version '0.1'
+group   'com.unito.di'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -19,7 +21,6 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
 
-	maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
     maven { url "http://jacamo.sourceforge.net/maven2" }
 }
 
@@ -44,7 +45,7 @@ dependencies {
 }
 
 jar {
-    baseName 'moise'
+    baseName 'moise-exceptions'
 }
 
 clean {
@@ -79,25 +80,31 @@ eclipse {
 }
 
 task javadocJar (type: Jar, dependsOn: javadoc) {
-    baseName 'moise'
+    baseName 'moise-exceptions'
     classifier = 'javadoc'
     from '${docsDir}/../../doc/api'
 }
 
 task sourceJar (type : Jar) {
-    baseName 'moise'
+    baseName 'moise-exceptions'
     classifier = 'sources'
     from sourceSets.main.allSource
 }
 
-
 publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/stex93/moise-exceptions")
+            credentials {
+                username = project.findProperty("gpr.user")
+                password = project.findProperty("gpr.key")
+            }
+        }
+    }
     publications {
-        maven(MavenPublication) {
-            from components.java
-			artifact sourceJar
-			artifact javadocJar
-            artifactId 'moise'
+        gpr(MavenPublication) {
+            from(components.java)
         }
     }
 }
@@ -166,52 +173,3 @@ task javadoc(overwrite: true, dependsOn: compileJava) {
     }
 }
 */
-
-
-task publishMavenSF(dependsOn: [ 'jar', 'build', 'publishToMavenLocal', 'sourceJar', 'javadocJar']) {
-  doLast {
-    description 'transfer local maven artifact to our maven2 repository at sourceforge'
-
-    def wdir = System.getProperty("user.home")+'/.m2/repository/org/jacamo/moise'
-    def tdir = 'jomifred,jacamo@web.sf.net:/home/project-web/jacamo/htdocs/maven2/org/jacamo/moise'
-    exec {
-        commandLine 'scp', '-r', project.version, tdir
-        workingDir wdir
-    }
-    exec {
-        commandLine 'cp', 'maven-metadata-local.xml', 'maven-metadata.xml'
-        workingDir wdir
-    }
-    exec {
-        commandLine 'scp', 'maven-metadata.xml', tdir
-        workingDir wdir
-    }
-  }
-}
-
-task publishMavenGitHub(dependsOn: [ 'build', 'publishToMavenLocal']) {
-  doLast {
-    def wdir = System.getProperty("user.home")+'/.m2/repository/org/jacamo/moise'
-    def rdir = '../jacamo-mvn-repo'
-    exec {
-        commandLine 'git', 'pull'
-        workingDir rdir
-    }
-    copy {
-        from wdir
-        into rdir + '/org/jacamo/moise'
-    }
-    exec {
-        commandLine 'git', 'add', '*'
-        workingDir rdir
-    }
-    exec {
-        commandLine 'git', 'commit', '-a', '-m', 'new version of moise '+project.version
-        workingDir rdir
-    }
-    exec {
-        commandLine 'git', 'push'
-        workingDir rdir
-    }
-  }
-}
