--- a/examples/exceptions/atm_exceptions/build.gradle
+++ b/examples/exceptions/atm_exceptions/build.gradle
@@ -21,7 +21,8 @@ repositories {
 
     maven { url "http://jacamo.sourceforge.net/maven2" }
     maven { url "http://jade.tilab.com/maven/" }
-    maven { url "http://moise-exceptions.sourceforge.io/maven2" }
+    //maven { url "https://moise-exceptions.sourceforge.io/maven2" }
+    maven { url "http://www.di.unito.it/~tedeschi/maven2" }
 
     flatDir {
        dirs 'lib'
