--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
-version '0.13-SNAPSHOT'
+version '1.0'
 group   'org.jacamo'
 
 sourceCompatibility = 1.8
@@ -19,8 +19,8 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
 
-	maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
-    maven { url "http://jacamo.sourceforge.net/maven2" }
+    maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
+    //maven { url "http://jacamo.sourceforge.net/maven2" }
 }
 
 /*configurations {
@@ -28,10 +28,10 @@ repositories {
 }*/
 
 dependencies {
-    compile group: 'org.jason-lang', name: 'jason',    version: '2.4', changing: false
-    compile group: 'org.jacamo',     name: 'npl' ,     version: '0.5-SNAPSHOT', changing: true, transitive: false
-    compile group: 'org.jacamo',     name: 'cartago',  version: '2.4', changing: true
-    compile group: 'org.jacamo',     name: 'jaca',     version: '2.4', changing: true
+    compile group: 'org.jason-lang', name: 'jason',    version: '2.5.2', changing: false
+    compile group: 'org.jacamo',     name: 'npl' ,     version: '0.5', changing: true
+    compile group: 'org.jacamo',     name: 'cartago',  version: '3.0', changing: true
+    compile group: 'org.jacamo',     name: 'jaca',     version: '3.0', changing: true
 
     testCompile group: 'junit',      name: 'junit', version: '4.+'
 
@@ -92,8 +92,8 @@ publishing {
     publications {
         maven(MavenPublication) {
             from components.java
-			artifact sourceJar
-			artifact javadocJar
+            artifact sourceJar
+            artifact javadocJar
             artifactId 'moise'
         }
     }
@@ -103,10 +103,12 @@ task fixTab {
     ant.fixcrlf(eol: 'lf',  includes: '**/*.txt,**/*.bat, **/*.adoc', srcdir: '.')
     ant.fixcrlf(tab: 'remove', tablength: '4', javafiles: 'true', includes: '**/*.java,**/*.xml,**/*.xsl,**/*.xsd', srcdir: 'src')
     ant.fixcrlf(tab: 'remove', tablength: '4', javafiles: 'true', includes: '**/*.java,**/*.xml,**/*.xsl,**/*.xsd', srcdir: 'examples')
+    ant.fixcrlf(tab: 'remove', tablength: '4', javafiles: 'true', includes: '*.gradle', srcdir: '.')
 }
 
 task renderAsciiDocs(type: Exec) {
-    commandLine 'find', '.', '-name', '*.adoc', '-exec', 'asciidoctor', '{}', ';'
+    commandLine 'find', '.', '-name', '*.adoc', '-exec', 'asciidoc-docker', '{}', ';'
+    //commandLine 'find', '.', '-name', '*.adoc', '-exec', 'asciidoctor', '{}', ';'
 }
 
 javadoc {
@@ -165,7 +167,7 @@ task javadoc(overwrite: true, dependsOn: compileJava) {
 */
 
 
-task publishMavenSF(dependsOn: [ 'jar', 'build', 'publishToMavenLocal', 'sourceJar', 'javadocJar']) {
+/*task publishMavenSF(dependsOn: [ 'jar', 'build', 'publishToMavenLocal', 'sourceJar', 'javadocJar']) {
   doLast {
     description 'transfer local maven artifact to our maven2 repository at sourceforge'
 
@@ -184,7 +186,7 @@ task publishMavenSF(dependsOn: [ 'jar', 'build', 'publishToMavenLocal', 'sourceJ
         workingDir wdir
     }
   }
-}
+}*/
 
 task publishMavenGitHub(dependsOn: [ 'build', 'publishToMavenLocal']) {
   doLast {
@@ -212,4 +214,3 @@ task publishMavenGitHub(dependsOn: [ 'build', 'publishToMavenLocal']) {
     }
   }
 }
-
