--- a/examples/moiselight/build.gradle
+++ b/examples/moiselight/build.gradle
@@ -19,17 +19,13 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
 
-	maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
-    maven { url "http://jacamo.sourceforge.net/maven2" }
+	  maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
+    //maven { url "http://jacamo.sourceforge.net/maven2" }
     //maven { url "https://jade.tilab.com/maven/" }
-
-    flatDir {
-       dirs 'lib'
-    }
 }
 
 dependencies {
-    compile group: 'org.jacamo', name: 'jacamo', version: '0.8-SNAPSHOT'
+    compile group: 'org.jacamo', name: 'jacamo', version: '0.9'
 }
 
 sourceSets {
