--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
-version '0.1'
+version '0.2'
 group   'it.unito.di'
 
 sourceCompatibility = 1.8
@@ -28,10 +28,14 @@ repositories {
 }*/
 
 dependencies {
-    compile group: 'org.jason-lang', name: 'jason',    version: '2.5.2', changing: false
+    //compile group: 'org.jason-lang', name: 'jason',    version: '2.5.2', changing: false
     compile group: 'org.jacamo',     name: 'npl' ,     version: '0.5', changing: true, transitive: false
-    compile group: 'org.jacamo',     name: 'cartago',  version: '3.0', changing: true
-    compile group: 'org.jacamo',     name: 'jaca',     version: '3.0', changing: true
+    //compile group: 'org.jacamo',     name: 'cartago',  version: '3.0', changing: true
+    //compile group: 'org.jacamo',     name: 'jaca',     version: '3.0', changing: true
+
+    compile group: 'org.jason'      , name: 'jason'   , version: '2.6-SNAPSHOT' , changing: true
+    compile group: 'org.jacamo'     , name: 'cartago' , version: '2.5' , changing: true
+    compile group: 'org.jacamo'     , name: 'jaca'    , version: '2.5' , changing: true
 
     testCompile group: 'junit',      name: 'junit', version: '4.+'
 
