--- a/examples/exceptions/atm_exceptions/build.gradle
+++ b/examples/exceptions/atm_exceptions/build.gradle
@@ -20,8 +20,7 @@ repositories {
     mavenCentral()
 
     maven { url "http://jacamo.sourceforge.net/maven2" }
-    maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
-    //maven { url "http://jade.tilab.com/maven/" }
+    maven { url "http://jade.tilab.com/maven/" }
     //maven { url "https://moise-exceptions.sourceforge.io/maven2" }
     maven { url "http://www.di.unito.it/~tedeschi/maven2" }
 
@@ -31,7 +30,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.jacamo',   name: 'jacamo',           version: '0.9'
+    compile group: 'org.jacamo',   name: 'jacamo',           version: '0.8'
     compile group: 'org.jacamo',   name: 'npl' ,             version: '0.5-SNAPSHOT', changing: true, transitive: false
     compile group: 'it.unito.di', name: 'moise-exceptions', version: '0.2', changing: true
 }
