--- a/examples/exceptions/atm_exceptions/build.gradle
+++ b/examples/exceptions/atm_exceptions/build.gradle
@@ -18,7 +18,7 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    mavenLocal()
+    //mavenLocal()
 
     maven { url "http://jacamo.sourceforge.net/maven2" }
     //maven { url "http://jade.tilab.com/maven/" }
