--- a/examples/exceptions/house-building/build.gradle
+++ b/examples/exceptions/house-building/build.gradle
@@ -11,16 +11,17 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 
 version '1.0'
-group   'org.jacamo'
+group   'it.unito.di'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    mavenLocal()
 
     maven { url "http://jacamo.sourceforge.net/maven2" }
-    maven { url "http://jade.tilab.com/maven/" }
+    //maven { url "http://www.di.unito.it/~tedeschi/maven2" }
 
     flatDir {
        dirs 'lib'
@@ -28,7 +29,18 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.jacamo', name: 'jacamo', version: '0.8'
+compile group: 'org.jacamo',   name: 'jacamo',           version: '0.8'
+compile group: 'org.jacamo',   name: 'npl' ,             version: '0.5-SNAPSHOT', changing: true, transitive: false
+compile group: 'it.unito.di', name: 'moise-exceptions', version: '0.2', changing: true
+}
+
+configurations {
+    compile.exclude group: 'org.jacamo', module: 'moise'
+}
+
+configurations.all {
+    // Check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
 sourceSets {
