--- a/examples/exceptions/atm/build.gradle
+++ b/examples/exceptions/atm/build.gradle
@@ -18,11 +18,11 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    mavenLocal()
+    //mavenLocal()
 
     maven { url "http://jacamo.sourceforge.net/maven2" }
     //maven { url "https://moise-exceptions.sourceforge.io/maven2" }
-    //maven { url "http://www.di.unito.it/~tedeschi/maven2" }
+    maven { url "http://www.di.unito.it/~tedeschi/maven2" }
 
     flatDir {
        dirs 'lib'
