--- a/examples/exceptions/house-building/build.gradle
+++ b/examples/exceptions/house-building/build.gradle
@@ -18,10 +18,10 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    mavenLocal()
+    //mavenLocal()
 
     maven { url "http://jacamo.sourceforge.net/maven2" }
-    //maven { url "http://www.di.unito.it/~tedeschi/maven2" }
+    maven { url "http://www.di.unito.it/~tedeschi/maven2" }
 
     flatDir {
        dirs 'lib'
