--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 
 */
 
+import groovy.swing.SwingBuilder
+
 plugins {
   id 'java'
   id 'eclipse'
@@ -24,9 +26,10 @@ repositories {
     maven { url "http://jacamo.sourceforge.net/maven2" }
 }
 
-/*configurations {
-    umljavadoc  // see http://www.umlgraph.org/doc/indexw.html
-}*/
+configurations {
+	sshAntTask
+    //umljavadoc  // see http://www.umlgraph.org/doc/indexw.html
+}
 
 dependencies {
     compile group: 'org.jason-lang', name: 'jason',    version: '2.4', changing: false
@@ -42,6 +45,7 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
+	sshAntTask 'org.apache.ant:ant-jsch:1.7.1', 'jsch:jsch:0.1.29'
 }
 
 jar {
@@ -175,10 +179,10 @@ task javadoc(overwrite: true, dependsOn: compileJava) {
 */
 
 // transfer local maven artifact to maven2 repository at sourceforge
-task publishMavenSF(dependsOn: [ 'build', 'publishToMavenLocal']) {
+/*task publishMavenSF(dependsOn: [ 'build', 'publishToMavenLocal']) {
 	doLast {
-	    def wdir = System.getProperty("user.home")+'/.m2/repository/com/unito/di/moise-exceptions'
-	    def tdir = project.findProperty("sf.user")+',moise-exceptions@web.sourceforge.net:/home/project-web/moise-exceptions/htdocs/maven2/com/unito/di/moise-exceptions'
+	    def wdir = System.getProperty("user.home")+'/.m2/repository/it/unito/di/moise-exceptions'
+	    def tdir = project.findProperty("sf.user")+'@web.sourceforge.net:/home/project-web/moise-exceptions/htdocs/maven2/it/unito/di/moise-exceptions/'
 	    exec {
 	        commandLine 'scp', '-r', project.version, tdir
 	        workingDir wdir
@@ -190,6 +194,28 @@ task publishMavenSF(dependsOn: [ 'build', 'publishToMavenLocal']) {
 	    exec {
 	        commandLine 'scp', 'maven-metadata.xml', tdir
 	        workingDir wdir
+	    }
+	}
+}*/
+
+task publishMavenSF(dependsOn: [ 'build', 'publishToMavenLocal']) {
+	doLast {
+    	
+    	def wdir = System.getProperty("user.home")+'/.m2/repository/it/unito/di/moise-exceptions/'+project.version
+	    def tdir = project.findProperty("sf.user")+'@web.sourceforge.net:/home/project-web/moise-exceptions/htdocs/maven2/it/unito/di/moise-exceptions/'+project.version
+		
+		ant.taskdef(name: 'scp', classname: 'org.apache.tools.ant.taskdefs.optional.ssh.Scp',
+            classpath: configurations.sshAntTask.asPath)
+            
+	    // Invoke the scp Ant task. (Use gradle -i update to see the output of the Ant task.)
+	    ant.scp(todir: tdir,
+	            keyfile: '${user.home}\\.gradle\\sourceforge-key.pem',
+	            passphrase: '',
+	            trust: "yes",
+	            verbose: 'true') {
+	        fileset(dir: wdir) {
+	            include(name: '**/**')
+	        }
 	    }
 	}
 }
