--- a/examples/exceptions/atm/build.gradle
+++ b/examples/exceptions/atm/build.gradle
@@ -21,8 +21,8 @@ repositories {
     //mavenLocal()
 
     maven { url "http://jacamo.sourceforge.net/maven2" }
-    //maven { url "https://moise-exceptions.sourceforge.io/maven2" }
-    maven { url "http://www.di.unito.it/~tedeschi/maven2" }
+    maven { url "https://moise-exceptions.sourceforge.io/maven2" }
+    //maven { url "http://www.di.unito.it/~tedeschi/maven2" }
 
     flatDir {
        dirs 'lib'
@@ -30,9 +30,9 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.jacamo',   name: 'jacamo',           version: '0.8'
-    compile group: 'org.jacamo',   name: 'npl' ,             version: '0.5-SNAPSHOT', changing: true, transitive: false
-    compile group: 'it.unito.di', name: 'moise-exceptions', version: '0.2', changing: true
+    compile group: 'org.jacamo',   name: 'jacamo',          version: '0.8'
+    compile group: 'org.jacamo',   name: 'npl' ,            version: '0.5-SNAPSHOT', changing: true, transitive: false
+    compile group: 'it.unito.di', name: 'moise-exceptions', version: '0.2',          changing: true
 }
 
 configurations {
