--- a/examples/exceptions/house-building/build.gradle
+++ b/examples/exceptions/house-building/build.gradle
@@ -21,7 +21,8 @@ repositories {
     //mavenLocal()
 
     maven { url "http://jacamo.sourceforge.net/maven2" }
-    maven { url "http://www.di.unito.it/~tedeschi/maven2" }
+    maven { url "https://moise-exceptions.sourceforge.io/maven2" }
+    //maven { url "http://www.di.unito.it/~tedeschi/maven2" }
 
     flatDir {
        dirs 'lib'
