--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,14 @@ configurations {
     //umljavadoc  // see http://www.umlgraph.org/doc/indexw.html
 }
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
 dependencies {
     compile group: 'org.jason-lang', name: 'jason',    version: '2.4', changing: false
     compile group: 'org.jacamo',     name: 'npl' ,     version: '0.5-SNAPSHOT', changing: true, transitive: false
@@ -131,7 +139,7 @@ if (JavaVersion.current().isJava8Compatible()) {
 }
 
 
-task publishToMavenSF(dependsOn: [ 'build', 'publishToMavenLocal']) {
+task publishToMavenSF(dependsOn: ['build', 'publishToMavenLocal']) {
 	doLast {
 
     	def wdir = System.getProperty("user.home")+'\\.m2\\repository\\it\\unito\\di\\moise-exceptions\\'
@@ -147,9 +155,9 @@ task publishToMavenSF(dependsOn: [ 'build', 'publishToMavenLocal']) {
 	            password: project.findProperty("sf.pass"),
 	            trust: "yes",
 	            verbose: 'true') {
-	        fileset(dir: wdir) {
-	            include(name: '**/**')
-	        }
+                    fileset(dir: wdir) {
+                        include(name: '**/**')
+                    }
 	    }
 
         file(wdir+'maven-metadata.xml').renameTo(file(wdir+'maven-metadata-local.xml'))
