Update to latest gradle version in ATM example

--- a/examples/atm/build.gradle
+++ b/examples/atm/build.gradle
@@ -5,10 +5,12 @@
    September 27, 2018 - 15:33:36
 */
 
-defaultTasks 'run'
+plugins {
+    id 'java'
+    id 'eclipse'
+}
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
+defaultTasks 'run'
 
 version '1.0'
 group   'it.unito.di'
@@ -20,7 +22,10 @@ repositories {
     mavenCentral()
     //mavenLocal()
 
-    maven { url "http://jacamo.sourceforge.net/maven2" }
+    maven {
+        url "http://jacamo.sourceforge.net/maven2"
+        allowInsecureProtocol = true
+    }
     maven { url "https://moise-exceptions.sourceforge.io/maven2" }
     //maven { url "http://www.di.unito.it/~tedeschi/maven2" }
 
@@ -30,9 +35,9 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.jacamo',   name: 'jacamo',          version: '0.8'
-    compile group: 'org.jacamo',   name: 'npl' ,            version: '0.5-SNAPSHOT', changing: true, transitive: false
-    compile group: 'it.unito.di', name: 'moise-exceptions', version: '0.2',          changing: true
+    implementation group: 'org.jacamo',   name: 'jacamo',          version: '0.8'
+    implementation group: 'org.jacamo',   name: 'npl' ,            version: '0.5-SNAPSHOT', changing: true, transitive: false
+    implementation group: 'it.unito.di', name: 'moise-exceptions', version: '0.2',          changing: true
 }
 
 configurations {
@@ -60,7 +65,7 @@ sourceSets {
 task run (type: JavaExec, dependsOn: 'classes') {
     description 'runs the application'
     group ' JaCaMo'
-    main = 'jacamo.infra.JaCaMoLauncher'
+    mainClass = 'jacamo.infra.JaCaMoLauncher'
     args 'atm.jcm'
     classpath sourceSets.main.runtimeClasspath
 }
