added house building example with logging WIP

--- a/examples/house-building-logging/build.gradle
+++ b/examples/house-building-logging/build.gradle
@@ -1,5 +1,5 @@
 /*
-   example: house building
+   example: house building logging
 
    Gradle build file for JaCaMo Application
    September 27, 2018 - 15:33:36
