--- a/examples/house-building/build.gradle
+++ b/examples/house-building/build.gradle
@@ -33,7 +33,7 @@ repositories {
     //maven { url "http://www.di.unito.it/~tedeschi/maven2" }
 
     flatDir {
-       dirs 'lib', 'res'
+       dirs 'lib'
     }
 }
 
@@ -44,8 +44,7 @@ dependencies {
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
   	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
-
-    implementation files('res')
+    
 }
 
 configurations {
