updated run script

--- a/examples/experimentation/house-building-exceptions-message-passing/build.gradle
+++ b/examples/experimentation/house-building-exceptions-message-passing/build.gradle
@@ -1,5 +1,5 @@
 /*
-   example: house building no exceptions new
+   example: house building exceptions message passing
 
    Gradle build file for JaCaMo Application
    September 27, 2018 - 15:33:36
