--- a/examples/experimentation/house-building-exceptions-ours/build.gradle
+++ b/examples/experimentation/house-building-exceptions-ours/build.gradle
@@ -1,5 +1,5 @@
 /*
-   example: house building logging new
+   example: house building exceptions ours
 
    Gradle build file for JaCaMo Application
    September 27, 2018 - 15:33:36
