--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,7 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
 
-    maven {
-        url "http://jacamo.sourceforge.net/maven2"
-        allowInsecureProtocol = true
-    }
+    maven { url "https://raw.githubusercontent.com/jacamo-lang/mvn-repo/master" }
 
 }
 
@@ -44,10 +41,10 @@ publishing {
 }
 
 dependencies {
-    implementation group: 'org.jason-lang', name: 'jason',    version: '2.4', changing: false
-    implementation group: 'org.jacamo',     name: 'npl' ,     version: '0.5-SNAPSHOT', changing: true, transitive: false
-    implementation group: 'org.jacamo',     name: 'cartago',  version: '2.4', changing: true
-    implementation group: 'org.jacamo',     name: 'jaca',     version: '2.4', changing: true
+    implementation group: 'org.jason-lang', name: 'jason',    version: '2.5.2', changing: false
+    implementation group: 'org.jacamo',     name: 'npl' ,     version: '0.5', changing: true, transitive: false
+    implementation group: 'org.jacamo',     name: 'cartago',  version: '3.0', changing: true
+    implementation group: 'org.jacamo',     name: 'jaca',     version: '3.0', changing: true
 
     implementation group: 'junit',      name: 'junit', version: '4.+'
 
@@ -57,7 +54,7 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
-	  sshAntTask 'org.apache.ant:ant-jsch:1.7.1', 'jsch:jsch:0.1.29'
+	sshAntTask 'org.apache.ant:ant-jsch:1.7.1', 'jsch:jsch:0.1.29'
 
     extraLibs group: 'org.jacamo',     name: 'npl' ,     version: '0.5-SNAPSHOT', changing: true, transitive: false
     extraLibs 'com.google.code.gson:gson:2.8.6'
