--- a/examples/house-building/build.gradle
+++ b/examples/house-building/build.gradle
@@ -18,8 +18,8 @@ apply plugin: 'eclipse'
 version '1.0'
 group   'it.unito.di'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 16
+targetCompatibility = 16
 
 repositories {
     mavenCentral()
@@ -36,7 +36,7 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.jacamo',  name: 'jacamo',           version: '1.0'
+    implementation group: 'org.jacamo',  name: 'jacamo',           version: '1.1.1-SNAPSHOT'
     implementation group: 'it.unito.di', name: 'moise-exceptions', version: '0.3', changing: true
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
