--- a/examples/experimentation/house-building-exceptions-message-passing-count/build.gradle
+++ b/examples/experimentation/house-building-exceptions-message-passing-count/build.gradle
@@ -18,17 +18,15 @@ apply plugin: 'eclipse'
 version '1.0'
 group   'it.unito.di'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 16
+targetCompatibility = 16
 
 repositories {
     mavenCentral()
     //mavenLocal()
 
-    maven {
-        url "http://jacamo.sourceforge.net/maven2"
-        allowInsecureProtocol = true
-    }
+    maven { url "https://repo.gradle.org/gradle/libs-releases-local" }
+    maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
 
     flatDir {
        dirs 'lib', 'res'
@@ -36,8 +34,7 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.jacamo',   name: 'jacamo',           version: '0.8'
-    implementation group: 'org.jacamo',   name: 'npl' ,             version: '0.5-SNAPSHOT', changing: true, transitive: false
+    implementation group: 'org.jacamo',   name: 'jacamo',           version: '1.1.1-SNAPSHOT'
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
   	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
