--- a/examples/experimentation/house-building-no-exceptions-ours/build.gradle
+++ b/examples/experimentation/house-building-no-exceptions-ours/build.gradle
@@ -18,16 +18,14 @@ apply plugin: 'eclipse'
 version '1.0'
 group   'it.unito.di'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 16
+targetCompatibility = 16
 
 repositories {
     mavenCentral()
 
-    maven {
-        url "http://jacamo.sourceforge.net/maven2"
-        allowInsecureProtocol = true
-    }
+    maven { url "https://repo.gradle.org/gradle/libs-releases-local" }
+    maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
     maven { url "https://moise-exceptions.sourceforge.io/maven2" }
 
     flatDir {
@@ -36,9 +34,8 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.jacamo', name: 'jacamo', version: '0.8'
-    implementation group: 'org.jacamo',   name: 'npl' ,             version: '0.5-SNAPSHOT', changing: true, transitive: false
-    implementation group: 'it.unito.di', name: 'moise-exceptions', version: '0.2', changing: true
+    implementation group: 'org.jacamo',   name: 'jacamo',           version: '1.1.1-SNAPSHOT'
+    implementation group: 'it.unito.di', name: 'moise-exceptions', version: '0.3', changing: true
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
   	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
