--- a/examples/cookies/build.gradle
+++ b/examples/cookies/build.gradle
@@ -63,7 +63,7 @@ task run (type: JavaExec, dependsOn: 'classes') {
     description 'runs the application'
     group ' JaCaMo'
     mainClass = 'jacamo.infra.JaCaMoLauncher'
-    args 'bakery.jcm'
+    args 'cookies.jcm'
     classpath sourceSets.main.runtimeClasspath
 }
 
