Added accountability examples

--- a/examples/accountability/bakery/build.gradle
+++ b/examples/accountability/bakery/build.gradle
@@ -1,5 +1,5 @@
 /*
-   example: amazon
+   example: bakery
 
    Gradle build file for JaCaMo Application
    September 27, 2018 - 15:33:36
@@ -25,6 +25,7 @@ repositories {
     maven { url "https://repo.gradle.org/gradle/libs-releases" }
     maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
     maven { url "https://moise-exceptions.sourceforge.io/maven2" }
+
 
     flatDir {
        dirs 'lib'
@@ -62,7 +63,7 @@ task run (type: JavaExec, dependsOn: 'classes') {
     description 'runs the application'
     group ' JaCaMo'
     mainClass = 'jacamo.infra.JaCaMoLauncher'
-    args 'amazon.jcm'
+    args 'bakery.jcm'
     classpath sourceSets.main.runtimeClasspath
 }
 
