--- a/examples/accountability/house-building/build.gradle
+++ b/examples/accountability/house-building/build.gradle
@@ -1,5 +1,5 @@
 /*
-   example: amazon
+   example: house building
 
    Gradle build file for JaCaMo Application
    September 27, 2018 - 15:33:36
@@ -11,6 +11,9 @@ plugins {
 }
 
 defaultTasks 'run'
+
+apply plugin: 'java'
+apply plugin: 'eclipse'
 
 version '1.0'
 group   'it.unito.di'
@@ -34,6 +37,10 @@ repositories {
 dependencies {
     implementation group: 'org.jacamo',  name: 'jacamo',           version: '1.2'
     implementation group: 'it.unito.di', name: 'moise-exceptions', version: '0.3', changing: true
+
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
+  	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
+
 }
 
 configurations {
@@ -62,7 +69,7 @@ task run (type: JavaExec, dependsOn: 'classes') {
     description 'runs the application'
     group ' JaCaMo'
     mainClass = 'jacamo.infra.JaCaMoLauncher'
-    args 'amazon.jcm'
+    args 'house.jcm'
     classpath sourceSets.main.runtimeClasspath
 }
 
