--- a/examples/accountability/parcel_delivery/build.gradle
+++ b/examples/accountability/parcel_delivery/build.gradle
@@ -1,5 +1,5 @@
 /*
-   example: amazon
+   example: parcel_delivery
 
    Gradle build file for JaCaMo Application
    September 27, 2018 - 15:33:36
@@ -62,7 +62,7 @@ task run (type: JavaExec, dependsOn: 'classes') {
     description 'runs the application'
     group ' JaCaMo'
     mainClass = 'jacamo.infra.JaCaMoLauncher'
-    args 'amazon.jcm'
+    args 'delivery.jcm'
     classpath sourceSets.main.runtimeClasspath
 }
 
